keloack/StoreApp/istio-configs/orderapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderapi
  namespace: storeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderapi
  template:
    metadata:
      labels:
        app: orderapi
    spec:
      containers:
        - name: orderapi
          image: mdmi007/orderapi:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orderapi-service
  namespace: storeapp
spec:
  selector:
    app: orderapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
