keloack/StoreApp/istio-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storeapp-ingress
  namespace: storeapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: storeapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storeapp-service
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orderapi-service
                port:
                  number: 80
